--- a/admin-ui/src/app/features/bulkupload/packetdataupload/singleview/singleview.component.html
+++ b/admin-ui/src/app/features/bulkupload/packetdataupload/singleview/singleview.component.html
@@ -8,7 +8,7 @@
   <div id="flex-container">
    <div class="card">
       <mat-card>
-        <div class="item1" style="flex: 3.2;-webkit-box-flex: 3.2;">
+        <div class="item1">
           <div class="profile-img">
             <img src="./assets/images/icon_center.svg" alt="img">
           </div>
@@ -46,18 +46,14 @@
           <div style="width: 10%">
           </div>
         </mat-card-content>
-        <div class="primary-form" style="max-width: 90%;padding: 25px;">
-          <mat-label style="color: rgba(0, 0, 0, 0.54);padding: 10px;font-size: 11px;font-weight: 600;">Status Description</mat-label>
-          <div style="padding: 10px;border-bottom: 1px solid #888;" id="statusDescription" [innerHTML]="data.statusDescription"></div>
-        </div>
-        <!-- <mat-card-content class="forms-container" *ngIf="data.statusDescription">
+        <mat-card-content class="forms-container" *ngIf="data.statusDescription">
           <div class="primary-form" style="max-width: 90%">
              <mat-form-field>
               <mat-label>{{'packet-upload.singleView.failureDescription-txt'|translate}}</mat-label>
               <textarea matInput placeholder="{{'packet-upload.singleView.placeHolder2-txt'|translate}}" id="statusDescription" value="{{data.statusDescription}}" rows="3" cols="40" readonly></textarea>
             </mat-form-field> 
           </div>
-        </mat-card-content> -->
+        </mat-card-content>
       </mat-card>
     </div>
   </div>
