--- a/admin-ui/src/app/features/resources/users/create/create.component.scss
+++ b/admin-ui/src/app/features/resources/users/create/create.component.scss
@@ -6,3 +6,9 @@ p {
   width: 300px;
 }
 
+.example-input {
+  background: #e3dada;
+  height: 50px;
+  padding-left: 1rem !important;
+  border-bottom: 1px solid silver !important;
+}
