--- a/admin-ui/src/app/shared/toolbar/toolbar.component.scss
+++ b/admin-ui/src/app/shared/toolbar/toolbar.component.scss
@@ -25,9 +25,9 @@
   margin: 0 10px;
   font-size: 9.5px;
   color: #3b4141;
-  display:none;
+  display: none;
 }
-.paginator-custom-label{
+.paginator-custom-label {
   margin: 0 10px;
   font-size: 9.5px;
   color: #3b4141;
@@ -59,7 +59,7 @@
   width: 50px !important;
   padding: 10px;
 }
-:host::ng-deep .mat-form-field{
+:host::ng-deep .mat-form-field {
   text-align: left !important;
 }
 ::ng-deep .mat-select-arrow {
@@ -69,7 +69,7 @@
 }
 :host::ng-deep .mat-select-value {
   font-size: 9.5px !important;
-  color: #3b4141;;
+  color: #3b4141;
   padding-left: 10px;
 }
 
@@ -82,12 +82,12 @@
 :host::ng-deep.mat-paginator-range-label:before {
   //content: "Viewing   ";
 }
-::ng-deep.mat-select-panel  {
+::ng-deep.mat-select-panel {
   // min-width: 75px !important;
   max-width: 100% !important;
 }
 ::ng-deep .mat-option {
-  padding-left: 10px  !important;
+  padding-left: 10px !important;
   height: 35px !important;
 }
 ::ng-deep .mat-option-text {
@@ -131,7 +131,7 @@
   cursor: pointer;
 }
 .button-style {
-  background-color: #ff4081;
+  background-color: var(--color-accent);
   color: white;
   font-size: 9.2px;
   height: 32px !important;
@@ -142,15 +142,15 @@
 .filter-button-style {
   height: 32px !important;
   font-size: 9.2px;
-  color: #ff4081;
-  border: 1px solid #ff4081;
+  color: var(--color-accent);
+  border: 1px solid var(--color-accent);
   font-family: "Roboto", sans-serif;
   line-height: 7px;
   transform: scale(0.95);
 }
 
 .filter-placer {
-  color: #ff4081 !important;
+  color: var(--color-accent) !important;
   position: absolute !important;
   right: 0 !important;
   margin: -12px -7px 0 10px;
