--- a/admin-ui/src/app/features/resources/devices/create/create.component.html
+++ b/admin-ui/src/app/features/resources/devices/create/create.component.html
@@ -153,7 +153,7 @@
                           "
                         >
                           <mat-option
-                            *ngFor="let data of dropDownValues.deviceTypeCode.primary"
+                            *ngFor="let data of dropDownValues.regCenterCode.primary"
                             [value]="data.fieldCode"
                           >
                             {{ data.fieldValue }}
